[tool.poetry]
name = "qcvis"
version = "0.0.0"
description = "Visualiser for QuartiCal gain solutions."
repository = "https://github.com/JSKenyon/QuartiCal-Visualiser"
documentation = "https://quartical.readthedocs.io"
authors = ["Jonathan Kenyon <jonathan.simon.kenyon@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy"
]
include = []

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
bokeh = ">=3.6.2"
dask-ms = {extras = ["xarray", "zarr"], version = ">=0.2.23"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
